# website_py

./: .coverage  .flake8  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  noxfile.py  pyproject.toml
docs/: conf.py  index.rst
src/my_hypermodern_python/: __init__.py  console.py  wikipedia.py
src/website_py/: console.py
tests/: conftest.py  test_console.py  test_wikipedia.py
