[tool.poetry]
name = "website-py"
version = "0.1.0"
description = "Hypermodern Python Project"
authors = ["Alex Grant <agrant@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Delacoal/website_py"
repository = "https://github.com/Delacoal/website_py"
keywords = ["website"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
click = "^8.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
website_py = "website_py.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["website_py"]

[tool.coverage.report]
show_missing = true
fail_under = 100