[tool.poetry]
name = "my-hypermodern-python"
version = "0.1.0"
description = "My version of the hypermodern python project article"
authors = ["Alex Grant <agrant@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Delacoal/my-hypermodern-python"
repository = "https://github.com/Delacoal/"
keywords = ["website"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
click = "^8.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-hypermodern-python = "my_hypermodern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["website_py"]

[tool.coverage.report]
show_missing = true
fail_under = 100