

[tool.poetry]
name = "my-hypermodern-python"
version = "0.1.0"
description = "my hypermodern Python project"
authors = ["Alexander Grant"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Delacoal/my-hypermodern-python"
repository = "https://github.com/Delacoal/my-hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0"
requests = "^2.22.0"
marshmallow = "^3.18.0"
desert = "^2022.9.22"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
coverage = {extras = ["toml"], version = "^5.0.1"}
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^20.1.2"
flake8-bandit = "^2.1.2"
safety = "^1.8.5"
mypy = "^0.761"
pytype = {version = "2020.1.8", python = "3.7"}
bandit = "1.7.2"
typeguard = "^2.13.3"
flake8-annotations = "^2.9.1"
isort = "^5.10.1"
types-urllib3 = "^1.26.25"
importlib-metadata = "4.13.0"
black = "^22.10.0"
flake8 = "3.7.9"
cfn-lint = "^0.68.0"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
xdoctest = "^1.1.0"

[tool.poetry.scripts]
hypermodern-python = "my_hypermodern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["my_hypermodern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.black]
line-length = 79
include = '\.py$'
exclude = '''
/(
    \.git
  | \.aws-sam
  | \.history
  | \.venv
  | \.nox
)/
'''

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["src", "tests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
